Ajustments in text

--- a/Lightning Talk @Movile - ML with Scikit-Learn/00 - Main Concepts and Presentation.ipynb
+++ b/Lightning Talk @Movile - ML with Scikit-Learn/00 - Main Concepts and Presentation.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "<img src=\"Figures/ds_venn.png\"/>\n",
     "\n",
-    "\"Petal-sepal\". Licensed under CC BY-SA 3.0 via Wikimedia Commons"
+    "\"Data Science Venn Diagram\". Licensed under CC BY-SA 3.0 via Wikimedia Commons"
    ]
   },
   {
@@ -63,12 +63,23 @@
    "source": [
     "# Main Concepts\n",
     "\n",
-    "- Attributes (Predictiors, Variables)\n",
-    "- Class (Target)\n",
-    "- Instance (Tuples, Records, lines)\n",
-    "- Model (Parameters to fit)\n",
-    "- Data (Duh!)\n",
-    "- Methods (Techniques, Algorithms (algos))"
+    "- **Attributes (Predictiors, Variables):** Columns of a dataset (thinking in Key-Value dataset)\n",
+    "\n",
+    "\n",
+    "- **Instance (Tuples, Records, lines):** Records of a dataset\n",
+    "\n",
+    "\n",
+    "- **Class (Target):** Column that indicates the final value of instance\n",
+    "\n",
+    "\n",
+    "- **Method (Technique, Algorithm (A.K.A. Algo)):** It's a function or algorithm designed to use some features of a dataset and learn.  \n",
+    "\n",
+    "\n",
+    "- **Model:** It's a representation of a set of parameters of a method.\n",
+    "\n",
+    "\n",
+    "- **Data** (Duh!)\n",
+    "\n"
    ]
   },
   {
@@ -84,9 +95,13 @@
    "source": [
     "# Types of learning\n",
     "\n",
-    "- Supervised\n",
-    "- Unsupervised\n",
-    "- Reinforcement"
+    "- **Supervised Learning**\n",
+    "\n",
+    "\n",
+    "- **Unsupervised Learning**\n",
+    "\n",
+    "\n",
+    "- **Reinforcement Learning**"
    ]
   },
   {
@@ -101,13 +116,17 @@
    "metadata": {},
    "source": [
     "# Supervised Learning\n",
-    "Training: Examples X_train together with labels y_train. Testing: Given X_test, predict y_test.\n",
     "\n",
+    "It's a type of learning where some function learning is based in some labeled data (X) and the final output of this function it's a target output (y). \n",
+    "\n",
+    "**Training:** Examples *X_train* together with labels *y_train*. Testing: Given X_test, predict y_test.\n",
+    "\n",
+    "**Common tasks:**\n",
     "- Classification\n",
     "- Regression\n",
     "- Ranking\n",
     "\n",
-    "A.K.A House of Prediction Analytics!!!"
+    "**A.K.A House of Prediction Analytics!!!**"
    ]
   },
   {
@@ -122,13 +141,18 @@
    "metadata": {},
    "source": [
     "# Unsupervised Learning\n",
+    "In this type of learning a function doesn't have labeled data. It means that the learning comes from the whole structure of the data, instead some statistical/algorithm approximation  \n",
+    "\n",
     "Examples X. Learn something about X.\n",
     "\n",
+    "**Common tasks:**\n",
     "- Dimensionality reduction\n",
     "- Clustering\n",
     "\n",
-    "A.K.A. Learn from data itself\n",
-    "A.K.A No-structured info apriori"
+    "**A.K.A. learn from data itself**\n",
+    "\n",
+    "\n",
+    "**A.K.A No-structured info apriori**"
    ]
   },
   {
@@ -143,11 +167,13 @@
    "metadata": {},
    "source": [
     "# Reinforcement Learning\n",
+    "Reinforcement learning it's a term stolen from robots where an agent makes decisions based in their environment (state) and for each action this agent have some penalty (for bad actions) or reward (for good actions). The main objective is get the maximum reward in some cummulative way.  \n",
+    "\n",
     "Use a structure of reward and penalty of the model with memory.\n",
     "\n",
     "- Ensemble Methods (?)\n",
     "\n",
-    "A.K.A Where the magic happens! Multiple models!"
+    "**A.K.A Where the magic happens! Multiple models! Models learning based in other models, like Inception movie**"
    ]
   },
   {
@@ -165,7 +191,7 @@
     "\n",
     "<img src=\"Figures/ML Workflow.png\"/>\n",
     "\n",
-    "\"Petal-sepal\". Licensed under CC BY-SA 3.0 via Wikimedia Commons"
+    "Source: \"Machine Learning in Python: Essential Techniques for Predictive Analysis\". Licensed under CC BY-SA 3.0 via Wikimedia Commons"
    ]
   },
   {
@@ -180,9 +206,24 @@
    "metadata": {},
    "source": [
     "# Introduction to Scikit-Learn\n",
-    "- Module Open-Source of Machine Learning in Python\n",
-    "- Best resources for learning\n",
-    "- Most used Programming Module used in Kaggle competitions"
+    "- An open-source API/Library of Machine Learning in Python\n",
+    "- Created by an Google Engineer called David Cournapeau in 2007\n",
+    "- Main advantage: From Lab to Production\n",
+    "- Most used programming module used in Kaggle competitions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Why Scikit-Learn?\n",
+    "- No-brainer open-source toolkit\n",
+    "- Do not use Java Virtual Machine (the main bottleneck to deal with big datasets and computation)\n",
+    "- Scalability, scalability, scalability \n",
+    "- Real deal programming module for data science\n",
+    "- Reliable algorithms \n",
+    "- Any programmer can use\n",
+    "- Integrate with H2O.ai, Microsoft Azure Machine Learning, R, Spark, and so on..."
    ]
   },
   {
@@ -212,15 +253,34 @@
    "metadata": {},
    "source": [
     "# Mindflow to apply Machine Learning algorithms\n",
-    "- 0.0) Preprocess you data before\n",
-    "- 0.1) Preprocess you data before\n",
+    "- 0.0) Preprocess your data in some RMDBS before!\n",
+    "\n",
+    "\n",
+    "- 0.1) reprocess your data in some RMDBS before!\n",
+    "\n",
+    "\n",
     "- 0.2) Read all three again!\n",
+    "\n",
+    "\n",
     "- 1) Get labeled data where it contains (i) training set and (ii) test set\n",
+    "\n",
+    "\n",
     "- 2) Choose the learning function\n",
+    "\n",
+    "\n",
     "- 3) Fit the model\n",
+    "\n",
+    "\n",
     "- 4) Predict using the models\n",
+    "\n",
+    "\n",
     "- 5) See the adherence of the model (evaluation)\n",
-    "- 6) Deploy"
+    "\n",
+    "\n",
+    "- 6) Deploy\n",
+    "\n",
+    "\n",
+    "- 7) Repeat the cycle again"
    ]
   },
   {
@@ -236,8 +296,14 @@
    "source": [
     "# Contact Me\n",
     "- site - [mineracaodedados.wordpress.com](http://mineracaodedados.wordpress.com)\n",
+    "\n",
+    "\n",
     "- twitter - [@flavioclesio](http://twitter.com/flavioclesio)\n",
+    "\n",
+    "\n",
     "- github - [fclesio](https://github.com/fclesio)\n",
+    "\n",
+    "\n",
     "- e-mail - [flavio.clesio@movile.com](email:flavio.clesio@movile.com)"
    ]
   },
