--- a/Lightning Talk @Movile - ML with Scikit-Learn/00 - Main Concepts and Presentation.ipynb
+++ b/Lightning Talk @Movile - ML with Scikit-Learn/00 - Main Concepts and Presentation.ipynb
@@ -173,7 +173,7 @@
     "\n",
     "- Ensemble Methods (?)\n",
     "\n",
-    "**A.K.A Where the magic happens! Multiple models! Models learning based in other models, like Inception movie**"
+    "**A.K.A Where the magic happens! Multiple models! Models learning based in other models, like Inception movie!**"
    ]
   },
   {
@@ -207,8 +207,14 @@
    "source": [
     "# Introduction to Scikit-Learn\n",
     "- An open-source API/Library of Machine Learning in Python\n",
+    "\n",
+    "\n",
     "- Created by an Google Engineer called David Cournapeau in 2007\n",
+    "\n",
+    "\n",
     "- Main advantage: From Lab to Production\n",
+    "\n",
+    "\n",
     "- Most used programming module used in Kaggle competitions"
    ]
   },
@@ -218,11 +224,23 @@
    "source": [
     "# Why Scikit-Learn?\n",
     "- No-brainer open-source toolkit\n",
+    "\n",
+    "\n",
     "- Do not use Java Virtual Machine (the main bottleneck to deal with big datasets and computation)\n",
+    "\n",
+    "\n",
     "- Scalability, scalability, scalability \n",
+    "\n",
+    "\n",
     "- Real deal programming module for data science\n",
+    "\n",
+    "\n",
     "- Reliable algorithms \n",
+    "\n",
+    "\n",
     "- Any programmer can use\n",
+    "\n",
+    "\n",
     "- Integrate with H2O.ai, Microsoft Azure Machine Learning, R, Spark, and so on..."
    ]
   },
@@ -253,7 +271,7 @@
    "metadata": {},
    "source": [
     "# Mindflow to apply Machine Learning algorithms\n",
-    "- 0.0) Preprocess your data in some RMDBS before!\n",
+    "- 0.0) Preprocess your data in some RMDBS **before**!\n",
     "\n",
     "\n",
     "- 0.1) reprocess your data in some RMDBS before!\n",
