--- a/Lightning Talk @Movile - ML with Scikit-Learn/01 - Pre-Processing (The 80% of all work!).ipynb
+++ b/Lightning Talk @Movile - ML with Scikit-Learn/01 - Pre-Processing (The 80% of all work!).ipynb
@@ -4,26 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O aspecto mais importante antes de qualquer aplicação de Machine Learning é sem sombra de dúvidas o pré-processamento dos dados. \n",
+    "The most important aspect before **any application** of Machine Learning is undoubtedly the pre-processing of data.\n",
     "\n",
-    "Por mais que grande parte dos tutoriais e livros atenham-se somente à parte de volume de dados (e.g. Big Data) ou mesmo na parte de técnicas propriamente ditas (e.g. Regressão Linear, Support Vector Machines, Redes Neurais, et cetera...) o conjunto de dados (a.k.a. dataset, base de dados, et cetera) exerce função determinante no sucesso ou a falta dele na aplicação de Machine Learning. \n",
+    "Several books, blog posts, tutorials are concern with the nice part of the job (e.g. insights of the data, applying novel algorithms, et cetera) or the application for it self of the algorithms(e.g. Linear Regression, Support Vector Machines, Neural Networks, et cetera ...).\n",
     "\n",
-    "Em uma analogia rápida, os dados são como uma chave e os algoritmos são como uma fechadura de uma porta.\n",
+    "Nevertheless the dataset (A.K.A. dataset, database, et cetera) plays an important decisive role in the success or lack thereof in the implementation of Machine Learning.\n",
     "\n",
-    "Você pode ter uma chave com desgaste... \n",
-    "(e.g. truncamento de dados, missing data, dados não normalizados, et cetera)\n",
+    "In a quick analogy, the data is like a key and algorithms are like a lock of a door.\n",
     "\n",
-    "Você pode ter a fechadura da porta com desgaste... \n",
-    "(e.g. ajuste paramétrico para 'fittar', eliminação de steps de cálculos, utilização de 'ensembles' para gambiarra no pipeline de algoritmos, et cetera)\n",
+    "You may have a key with some friction  ... (e.g. truncation data, missing data, non-standard data, et cetera)\n",
     "\n",
-    "Mas a fechadura somente vai abrir com a chave correspondente. \n",
-    "(e.g. base de dados com os atributos de predição e de resultado (target) corretas).\n",
+    "You may have the door lock with some friction ... (e.g. parametric adjustment for 'fitting', eliminating steps of calculations, using 'ensembles'algorithms in the pipeline, et cetera)\n",
     "\n",
-    "Agora que já sabemos a importância de se ter os dados para aplicação dos algoritmos, e por consequência criação de modelos, vamos falar de um aspecto importante na questão do input dos dados que é o Pré-Processamento (Preprocessing)\n",
+    "But the lock will only open with the corresponding key. (e.g. database with the attributes of prediction and outcome (target) correct).\n",
     "\n",
-    "O pré-processamento de dados é toda e qualquer atividade relativa ao ajuste dos dados tanto em termos de formatação, amostragem para que os algoritmos consigam realizar as atividades de construção dos modelos de forma a ter um melhor aproveitamento em termos computacionais (complexidade temporal + complexidade espacial).\n",
+    "Now that we know the importance of having the data to application of algorithms, and consequently creating models, let's talk about an important aspect of the issue of input data that is the Pre-processing.\n",
     "\n",
-    "As principais atividades do pré-processamento de dados são:\n",
+    "The pre-processing of data is any activity on the adjustment of the data both in terms of format, sampling so that the algorithms are able to perform construction activities of the models in order to have a better use computationally (temporal complexity + complexity space).\n",
+    "\n",
+    "The main activities of the preprocessing of data are:\n",
+    "\n",
     "\n",
     "- Amostragem (Sampling)\n",
     "- Feature Engineering que contém (i) Feature Extraction e (ii) Feature Selection\n",
@@ -31,24 +31,19 @@
     "- Scaling\n",
     "- Padronização (Standarize)\n",
     "- Normalização\n",
-    "- Dimensionality Reduction\n",
-    "\n",
-    "Vamos começar com primeiramente com a importação dos dados.\n",
-    "\n",
-    "Nesse primeiro chunk vamos utilizar os dados da própria bilbioteca do Scikit-Learn relativa aos dados da base de dados Iris.\n",
-    "\n"
+    "- Dimensionality Reduction"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Primeiramente vamos importar os datasets do pacote do Scikit."
+    "First at all, lets import the dataset of scikit package. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -61,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Agora, vamos criar um objeto com o nome de 'datasets' e vamos carregar a base de dados iris."
+    "Now, let's create an object called *datasets* and load Iris dataset."
    ]
   },
   {
@@ -79,27 +74,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Essa base de dados Iris é dividida em duas partes, uma chamada 'data' e outra chamada 'target'.\n",
-    "\n",
+    "This dataset is splited in two sets, one called data and another called target.\n",
     "O conjunto de dados 'data' possuí todos os atributos (i.e. variáveis independentes, predictors, features, etc) relativos à base Iris.\n",
     "\n",
-    "O conjunto de dados 'target' possuí todos as classes (i.e. variável dependente, target features, etc.) da mesma base Iris.\n",
+    "The set target have all classes of dataset Iris. \n",
     "\n",
-    "Vamos ver agora a quantidade de dados em cada um dos datasets usando a função 'shape'.\n"
+    "Let's see the quantity of data in each dataset using the function shape. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(150, 4)\n"
+     "ename": "AttributeError",
+     "evalue": "module 'sklearn.datasets' has no attribute 'data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-28985ec2b2b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdatasets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'sklearn.datasets' has no attribute 'data'"
      ]
     }
    ],
@@ -111,23 +109,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "No dataset 'data' temos 150 registros (i.e. tuplas, linhas, etc) e 4 atributos. \n",
+    "In resultset data we have 150 records and 4 attributes.\n",
     "\n",
-    "Vejamos o que temos no datset 'target'."
+    "Let's see qhat we have in dataset target."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(150,)\n"
+     "ename": "AttributeError",
+     "evalue": "module 'sklearn.datasets' has no attribute 'target'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-34-8edd5aacdd7e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdatasets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'sklearn.datasets' has no attribute 'target'"
      ]
     }
    ],
@@ -139,176 +141,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como era de se esperar, temos somente uma coluna, que é a variável dependente.\n",
+    "As we can see, we have only a column that is the dependent variable. \n",
     "\n",
-    "Mas uma das boas práticas de pré-processamento é sempre conferir se os dados foram realmente carregados. Pra isso vamos ver cada um dos datasets."
+    "Best pratice: Always look to your data. Always."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 5.1,  3.5,  1.4,  0.2],\n",
-       "       [ 4.9,  3. ,  1.4,  0.2],\n",
-       "       [ 4.7,  3.2,  1.3,  0.2],\n",
-       "       [ 4.6,  3.1,  1.5,  0.2],\n",
-       "       [ 5. ,  3.6,  1.4,  0.2],\n",
-       "       [ 5.4,  3.9,  1.7,  0.4],\n",
-       "       [ 4.6,  3.4,  1.4,  0.3],\n",
-       "       [ 5. ,  3.4,  1.5,  0.2],\n",
-       "       [ 4.4,  2.9,  1.4,  0.2],\n",
-       "       [ 4.9,  3.1,  1.5,  0.1],\n",
-       "       [ 5.4,  3.7,  1.5,  0.2],\n",
-       "       [ 4.8,  3.4,  1.6,  0.2],\n",
-       "       [ 4.8,  3. ,  1.4,  0.1],\n",
-       "       [ 4.3,  3. ,  1.1,  0.1],\n",
-       "       [ 5.8,  4. ,  1.2,  0.2],\n",
-       "       [ 5.7,  4.4,  1.5,  0.4],\n",
-       "       [ 5.4,  3.9,  1.3,  0.4],\n",
-       "       [ 5.1,  3.5,  1.4,  0.3],\n",
-       "       [ 5.7,  3.8,  1.7,  0.3],\n",
-       "       [ 5.1,  3.8,  1.5,  0.3],\n",
-       "       [ 5.4,  3.4,  1.7,  0.2],\n",
-       "       [ 5.1,  3.7,  1.5,  0.4],\n",
-       "       [ 4.6,  3.6,  1. ,  0.2],\n",
-       "       [ 5.1,  3.3,  1.7,  0.5],\n",
-       "       [ 4.8,  3.4,  1.9,  0.2],\n",
-       "       [ 5. ,  3. ,  1.6,  0.2],\n",
-       "       [ 5. ,  3.4,  1.6,  0.4],\n",
-       "       [ 5.2,  3.5,  1.5,  0.2],\n",
-       "       [ 5.2,  3.4,  1.4,  0.2],\n",
-       "       [ 4.7,  3.2,  1.6,  0.2],\n",
-       "       [ 4.8,  3.1,  1.6,  0.2],\n",
-       "       [ 5.4,  3.4,  1.5,  0.4],\n",
-       "       [ 5.2,  4.1,  1.5,  0.1],\n",
-       "       [ 5.5,  4.2,  1.4,  0.2],\n",
-       "       [ 4.9,  3.1,  1.5,  0.1],\n",
-       "       [ 5. ,  3.2,  1.2,  0.2],\n",
-       "       [ 5.5,  3.5,  1.3,  0.2],\n",
-       "       [ 4.9,  3.1,  1.5,  0.1],\n",
-       "       [ 4.4,  3. ,  1.3,  0.2],\n",
-       "       [ 5.1,  3.4,  1.5,  0.2],\n",
-       "       [ 5. ,  3.5,  1.3,  0.3],\n",
-       "       [ 4.5,  2.3,  1.3,  0.3],\n",
-       "       [ 4.4,  3.2,  1.3,  0.2],\n",
-       "       [ 5. ,  3.5,  1.6,  0.6],\n",
-       "       [ 5.1,  3.8,  1.9,  0.4],\n",
-       "       [ 4.8,  3. ,  1.4,  0.3],\n",
-       "       [ 5.1,  3.8,  1.6,  0.2],\n",
-       "       [ 4.6,  3.2,  1.4,  0.2],\n",
-       "       [ 5.3,  3.7,  1.5,  0.2],\n",
-       "       [ 5. ,  3.3,  1.4,  0.2],\n",
-       "       [ 7. ,  3.2,  4.7,  1.4],\n",
-       "       [ 6.4,  3.2,  4.5,  1.5],\n",
-       "       [ 6.9,  3.1,  4.9,  1.5],\n",
-       "       [ 5.5,  2.3,  4. ,  1.3],\n",
-       "       [ 6.5,  2.8,  4.6,  1.5],\n",
-       "       [ 5.7,  2.8,  4.5,  1.3],\n",
-       "       [ 6.3,  3.3,  4.7,  1.6],\n",
-       "       [ 4.9,  2.4,  3.3,  1. ],\n",
-       "       [ 6.6,  2.9,  4.6,  1.3],\n",
-       "       [ 5.2,  2.7,  3.9,  1.4],\n",
-       "       [ 5. ,  2. ,  3.5,  1. ],\n",
-       "       [ 5.9,  3. ,  4.2,  1.5],\n",
-       "       [ 6. ,  2.2,  4. ,  1. ],\n",
-       "       [ 6.1,  2.9,  4.7,  1.4],\n",
-       "       [ 5.6,  2.9,  3.6,  1.3],\n",
-       "       [ 6.7,  3.1,  4.4,  1.4],\n",
-       "       [ 5.6,  3. ,  4.5,  1.5],\n",
-       "       [ 5.8,  2.7,  4.1,  1. ],\n",
-       "       [ 6.2,  2.2,  4.5,  1.5],\n",
-       "       [ 5.6,  2.5,  3.9,  1.1],\n",
-       "       [ 5.9,  3.2,  4.8,  1.8],\n",
-       "       [ 6.1,  2.8,  4. ,  1.3],\n",
-       "       [ 6.3,  2.5,  4.9,  1.5],\n",
-       "       [ 6.1,  2.8,  4.7,  1.2],\n",
-       "       [ 6.4,  2.9,  4.3,  1.3],\n",
-       "       [ 6.6,  3. ,  4.4,  1.4],\n",
-       "       [ 6.8,  2.8,  4.8,  1.4],\n",
-       "       [ 6.7,  3. ,  5. ,  1.7],\n",
-       "       [ 6. ,  2.9,  4.5,  1.5],\n",
-       "       [ 5.7,  2.6,  3.5,  1. ],\n",
-       "       [ 5.5,  2.4,  3.8,  1.1],\n",
-       "       [ 5.5,  2.4,  3.7,  1. ],\n",
-       "       [ 5.8,  2.7,  3.9,  1.2],\n",
-       "       [ 6. ,  2.7,  5.1,  1.6],\n",
-       "       [ 5.4,  3. ,  4.5,  1.5],\n",
-       "       [ 6. ,  3.4,  4.5,  1.6],\n",
-       "       [ 6.7,  3.1,  4.7,  1.5],\n",
-       "       [ 6.3,  2.3,  4.4,  1.3],\n",
-       "       [ 5.6,  3. ,  4.1,  1.3],\n",
-       "       [ 5.5,  2.5,  4. ,  1.3],\n",
-       "       [ 5.5,  2.6,  4.4,  1.2],\n",
-       "       [ 6.1,  3. ,  4.6,  1.4],\n",
-       "       [ 5.8,  2.6,  4. ,  1.2],\n",
-       "       [ 5. ,  2.3,  3.3,  1. ],\n",
-       "       [ 5.6,  2.7,  4.2,  1.3],\n",
-       "       [ 5.7,  3. ,  4.2,  1.2],\n",
-       "       [ 5.7,  2.9,  4.2,  1.3],\n",
-       "       [ 6.2,  2.9,  4.3,  1.3],\n",
-       "       [ 5.1,  2.5,  3. ,  1.1],\n",
-       "       [ 5.7,  2.8,  4.1,  1.3],\n",
-       "       [ 6.3,  3.3,  6. ,  2.5],\n",
-       "       [ 5.8,  2.7,  5.1,  1.9],\n",
-       "       [ 7.1,  3. ,  5.9,  2.1],\n",
-       "       [ 6.3,  2.9,  5.6,  1.8],\n",
-       "       [ 6.5,  3. ,  5.8,  2.2],\n",
-       "       [ 7.6,  3. ,  6.6,  2.1],\n",
-       "       [ 4.9,  2.5,  4.5,  1.7],\n",
-       "       [ 7.3,  2.9,  6.3,  1.8],\n",
-       "       [ 6.7,  2.5,  5.8,  1.8],\n",
-       "       [ 7.2,  3.6,  6.1,  2.5],\n",
-       "       [ 6.5,  3.2,  5.1,  2. ],\n",
-       "       [ 6.4,  2.7,  5.3,  1.9],\n",
-       "       [ 6.8,  3. ,  5.5,  2.1],\n",
-       "       [ 5.7,  2.5,  5. ,  2. ],\n",
-       "       [ 5.8,  2.8,  5.1,  2.4],\n",
-       "       [ 6.4,  3.2,  5.3,  2.3],\n",
-       "       [ 6.5,  3. ,  5.5,  1.8],\n",
-       "       [ 7.7,  3.8,  6.7,  2.2],\n",
-       "       [ 7.7,  2.6,  6.9,  2.3],\n",
-       "       [ 6. ,  2.2,  5. ,  1.5],\n",
-       "       [ 6.9,  3.2,  5.7,  2.3],\n",
-       "       [ 5.6,  2.8,  4.9,  2. ],\n",
-       "       [ 7.7,  2.8,  6.7,  2. ],\n",
-       "       [ 6.3,  2.7,  4.9,  1.8],\n",
-       "       [ 6.7,  3.3,  5.7,  2.1],\n",
-       "       [ 7.2,  3.2,  6. ,  1.8],\n",
-       "       [ 6.2,  2.8,  4.8,  1.8],\n",
-       "       [ 6.1,  3. ,  4.9,  1.8],\n",
-       "       [ 6.4,  2.8,  5.6,  2.1],\n",
-       "       [ 7.2,  3. ,  5.8,  1.6],\n",
-       "       [ 7.4,  2.8,  6.1,  1.9],\n",
-       "       [ 7.9,  3.8,  6.4,  2. ],\n",
-       "       [ 6.4,  2.8,  5.6,  2.2],\n",
-       "       [ 6.3,  2.8,  5.1,  1.5],\n",
-       "       [ 6.1,  2.6,  5.6,  1.4],\n",
-       "       [ 7.7,  3. ,  6.1,  2.3],\n",
-       "       [ 6.3,  3.4,  5.6,  2.4],\n",
-       "       [ 6.4,  3.1,  5.5,  1.8],\n",
-       "       [ 6. ,  3. ,  4.8,  1.8],\n",
-       "       [ 6.9,  3.1,  5.4,  2.1],\n",
-       "       [ 6.7,  3.1,  5.6,  2.4],\n",
-       "       [ 6.9,  3.1,  5.1,  2.3],\n",
-       "       [ 5.8,  2.7,  5.1,  1.9],\n",
-       "       [ 6.8,  3.2,  5.9,  2.3],\n",
-       "       [ 6.7,  3.3,  5.7,  2.5],\n",
-       "       [ 6.7,  3. ,  5.2,  2.3],\n",
-       "       [ 6.3,  2.5,  5. ,  1.9],\n",
-       "       [ 6.5,  3. ,  5.2,  2. ],\n",
-       "       [ 6.2,  3.4,  5.4,  2.3],\n",
-       "       [ 5.9,  3. ,  5.1,  1.8]])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "module 'sklearn.datasets' has no attribute 'data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-4c8ede9d9fe8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdatasets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'sklearn.datasets' has no attribute 'data'"
+     ]
     }
    ],
    "source": [
@@ -347,10 +201,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Agora que já vimos que os nossos dados foram carregados, apenas para fins de exemplificação vamos colocar cada um desses dados em um objeto distinto. \n",
+    "For explamplification we'll put all data in another objects. \n",
     "\n",
-    "\n",
-    "Para padronização de nomenclatura, sempre que usarmos um conjunto de dados que consta os atributos, vamos atribuir o objeto 'X', e no caso da variável dependente vamos atribuir um objeto de dados com o nome de 'y'.\n"
+    "For naming proposes every time that we use the predictor variables we'll use X as object, and y for dependent variable in target dataset. "
    ]
   },
   {
@@ -379,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vamos conferir os nossos objetos 'X' e 'y'."
+    "Let's see the data in X and y objects."
    ]
   },
   {
