--- a/Lightning Talk @Movile - ML with Scikit-Learn/00 - Main Concepts and Presentation.ipynb
+++ b/Lightning Talk @Movile - ML with Scikit-Learn/00 - Main Concepts and Presentation.ipynb
@@ -13,23 +13,23 @@
    "metadata": {},
    "source": [
     "# Overview\n",
-    "- [Machine Learning in Data Science](# Machine Learning in Data Science)\n",
-    "- [Data Science Toolkit](# Data Science Toolkit)\n",
-    "- [Main Concepts](# Main Concepts)\n",
-    "- [Types of learning](# Types of learning)\n",
-    "    - [Supervised Learning](# Supervised Learning)\n",
-    "    - [Unsupervised Learning](# Unsupervised Learning)\n",
-    "    - [Reinforcement Learning](# Reinforcement Learning)\n",
-    "- [Machine Learning Workflow](# Machine Learning Workflow)    \n",
-    "- [Introduction to Scikit-Learn](# Introduction to Scikit-Learn)\n",
-    "- [Let’s go to iPython Notebook](# Let’s go to iPython Notebook)\n",
+    "- [[Machine Learning in Data Science](# MachineLearning in Data Science)]\n",
+    "- [[Data Science Toolkit](# Data Science Toolkit)]\n",
+    "- [[Main Concepts](# Main Concepts)]\n",
+    "- [[Types of learning](# Types of learning)]\n",
+    "    - [[Supervised Learning](# Supervised Learning)]\n",
+    "    - [[Unsupervised Learning](# Unsupervised Learning)]\n",
+    "    - [[Reinforcement Learning](# Reinforcement Learning)]\n",
+    "- [[Machine Learning Workflow](# Machine Learning Workflow)]  \n",
+    "- [[Introduction to Scikit-Learn](# Introduction to Scikit-Learn)]\n",
+    "- [[Let’s go to iPython Notebook](# Let’s go to iPython Notebook)]\n",
     "    - Linear Regresson  (Supervised Learning)\n",
     "    - Decision Trees (Supervised Learning)\n",
     "    - GLM (Supervised Learning)\n",
     "    - K-Means (Unsupervised Learning)\n",
     "    - Random Forests (Ensemble Learning)\n",
-    "- [Mindflow to apply Machine Learning algorithms](# Mindflow to apply Machine Learning algorithms)\n",
-    "- [Contact Me](# Contact Me)"
+    "- [[Mindflow to apply Machine Learning algorithms](# Mindflow to apply Machine Learning algorithms)]\n",
+    "- [[Contact Me](# Contact Me)]"
    ]
   },
   {
@@ -285,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
