fixing some typos and rephrasing

--- a/Python/Análise de Sobrevivência em Telecom.ipynb
+++ b/Python/Análise de Sobrevivência em Telecom.ipynb
@@ -19,38 +19,38 @@
     "\n",
     "Modelos de negócoios baseados no volume de pessoas que estão dispostas a terem uma cobrança recorrente o negócio fica bem mais complicado, dado que diferentemente de produtos que tem uma eslasticidade maior o fluxo de receita é extremamente sujeito aos sabores do mercado e dos clientes.\n",
     "\n",
-    "Dentre desse cenário todas as empresas que tem o seu fluxo de receita baseado nesse tipo de business saber quando um cliente entrará em uma situação de saída através do cancelamwnto do serviço (Churn) é fundamental para criar mecanismos de retenção maois efeitvos, ou mesmo criação de réguas de contato com os clientes para evitar ou minimizar a chance de um cliente sair da base de dados. \n",
+    "Dentro desse cenário, todas as empresas que tem o seu fluxo de receita baseado nesse tipo de business, saber quando um cliente entrará em uma situação de saída através do cancelamento do serviço (Churn) é fundamental para criar mecanismos de retenção mais efetivos, ou mesmo criação de réguas de contato com os clientes para evitar ou minimizar a chance de um cliente sair da base de dados. \n",
     "\n",
-    "Sendo assim, qualquer mecanismo ou mesmo esforço para minimizar esse efeito é de grande valia. E é aí que fomos na teoria estatística buscar respostas para a pergunta: Como diminuir o Churn? Como identificar um potencial cliente que irá entrar em uma situação de Churn? Quais estratégias seguir para minimizar esse Churn? Quais réguas de comunicação com os clientes devemos ter para entender os motivos que estão fazendo um assinante cancelar o serviço e quais são as estratégias de customer Winback possíveis nesse cenário?\n",
+    "Sendo assim, qualquer mecanismo ou mesmo esforço para minimizar esse efeito é de grande valia. E é aí que fomos na teoria estatística buscar respostas para a pergunta: Como diminuir o Churn? Como identificar um potencial cliente que irá entrar em uma situação de Churn? Quais estratégias seguir para minimizar esse Churn? Quais réguas de comunicação com os clientes devemos ter para entender os motivos que estão fazendo um assinante cancelar o serviço e quais são as estratégias de customer winback possíveis nesse cenário?\n",
     "\n",
-    "E pra responder essa pergunta, fomos buscar as respostas na análise de sobrevivência dado que essa área da estatística é uma das que lidam melhor em termos de probabilidade de tempo de vida seja de materiais (e.g. tempo de falha de algum sistema mecânico), no tempo de vida de pessoas propriamente ditas (e.g. dado uma determinada posologia qual é a estimativa de um paciente sobreviver a um câncer), e no nosso caso quanto tempo de vida um assinante tem até deixar cancelar a sua assinatura. \n",
+    "E pra responder essa pergunta, fomos buscar as respostas na análise de sobrevivência dado que essa área da estatística é uma das que lidam melhor em termos de probabilidade de tempo de vida, seja de materiais (e.g. tempo de falha de algum sistema mecânico), no tempo de vida de pessoas propriamente ditas (e.g. dado uma determinada posologia qual é a estimativa de um paciente sobreviver a um câncer), e no nosso caso quanto tempo de vida um assinante tem até deixar cancelar a sua assinatura. \n",
     "\n",
     "A análise de sobreviência é uma técnica estatístisca que foi desenvolvida na medicina e tem como principal finalidade estimar o tempo de sobrevivência ou tempo de morte de um determinado paciente dentro de um horizonte do tempo. \n",
     "\n",
     "O estimador de Kaplan-Meier (1958) utiliza uma função de sobrevivência que leva em consideração uma divisão entre o número de observações que não falharam no tempo t pelo número total de observações no estudo em que cada intervalo de tempo tem-se o número de falhas/mortes/churn distintos bem como é calculado o risco de acordo com o número de individuos restantes no tempo subsequente.\n",
     "\n",
-    "Já o estimador Nelson-Aalen (1978) é um estimador que tem as mesmas características do Kaplan-Meier, com a dferença que esse estimador traablha com uma função de sobrevivência que e cumulative hazard rate function\n",
+    "Já o estimador Nelson-Aalen (1978) é um estimador que tem as mesmas características do Kaplan-Meier, com a dferença que esse estimador trabalha com uma função de sobrevivência que é a cumulative hazard rate function.\n",
     "\n",
-    "Os elementos fundamentais para caracterização de um estudo que envolve análise de sobrevivência são, o tempo inicial, escala de medida do intervalo de tempo, e se o evento de churn ocorreu\n",
+    "Os elementos fundamentais para caracterização de um estudo que envolve análise de sobrevivência são, o tempo inicial, escala de medida do intervalo de tempo, e se o evento de churn ocorreu.\n",
     "\n",
-    "Os principais artigos são de  Artigos Stigler (1994) Kaplan-Meier (1958), Cox (1972).\n",
+    "Os principais artigos são de Stigler (1994), Kaplan-Meier (1958) e Cox (1972).\n",
     "\n",
     "Esse post não tem como principal objetivo dar algum tipo de introdução à survival analysis, dado que tem muitas referências na internet sobre o assunto e não há nada a ser acrescentado nesse sentido. \n",
     "\n",
-    "Como a análise de cohort, a análise de sobrevivência tem como principal característica ser um estudo de natureza logituginal, isto é, os seus resultados tem uma caracterisca de temporalidade seja em aspectos de retrospeccao quanto em termos de perspectivas isso é, tem uma resposta tipicamente temporal para um detemrminado evento de interesse. \n",
+    "Como a análise de cohort, a análise de sobrevivência tem como principal característica ser um estudo de natureza logituginal, isto é, os seus resultados tem uma caracterisca de temporalidade seja em aspectos de retrospecção, quanto em termos de perspectivas, isso é, tem uma resposta tipicamente temporal para um detemrminado evento de interesse. \n",
     "\n",
-    "No caso o que vamos usar como forma de comparação amostral é o comportamento longituginal de acordo com determinadas caracteristicas de amostragens diferentes ao longo do tempo e os fatores que influenciam no churn\n",
+    "No caso o que vamos usar como forma de comparação amostral é o comportamento longituginal de acordo com determinadas caracteristicas de amostragens diferentes ao longo do tempo, e os fatores que influenciam no churn.\n",
     "\n",
-    "As diferenciações estão claras através das covariáveis, mas que devido a questões de NDA não vamos postar aqui, mas para fins de exemplificação e comparação vamos considerar que todas as covariaveis sao semelhantes\n",
+    "As diferenciações estão claras através das covariáveis, mas que devido a questões de NDA não vamos postar aqui, mas para fins de exemplificação e comparação vamos considerar que todas as covariaveis são semelhantes.\n",
     "\n",
-    "Podemos dizer que a análise de sobrevivência aplicado em um caso de telecom, pode ajudar ter uma estimativa em forma de probabilidade em relação ao tempo em que uma assinatura vai durar até o evento de churn (cancelamento) e dessa forma elaborar estratégias para evitar esse evento, dado que adquirir um novo cliente é mais caro do que manter um novo e entra totalmente dentro de uma estratégia de Customer Winback\n",
+    "Podemos dizer que a análise de sobrevivência aplicada em um caso de telecom, pode ajudar ter uma estimativa em forma de probabilidade em relação ao tempo em que uma assinatura vai durar até o evento de churn (cancelamento) e dessa forma elaborar estratégias para evitar esse evento, dado que adquirir um novo cliente é mais caro do que manter um novo e entra totalmente dentro de uma estratégia de Customer Winback\n",
     "\n",
-    "No nosso caso o tempo de falha ou tempo de morte, como estamos falando de serviços de assinaturas o nosso evento de interesse seria o churn, ou cancelamento da assinatura. EM outras palavras teríamos algo do tipo Time-to-Churn. Guardem esse termo.  \n",
+    "No nosso caso o tempo de falha ou tempo de morte, como estamos falando de serviços de assinaturas, o nosso evento de interesse seria o churn, ou cancelamento da assinatura. Em outras palavras teríamos algo do tipo Time-to-Churn. Guardem esse termo.  \n",
     "\n",
     "\n",
     "Metodologia\n",
     "\n",
-    "Usamos dados de dois produtos antigos em que os dados foram anonimizados e aplicados um hash de embaralhamento uniforme (que obedece uma dsitribuição específica) nos atributos por questões de privacidade, em que selecionamos alguns dados que são:\n",
+    "Usamos dados de dois produtos antigos em que os dados foram anonimizados e aplicados um hash de embaralhamento uniforme (que obedece uma distribuição específica) nos atributos por questões de privacidade, que são:\n",
     "\n",
     "- id = Identificador do registro\n",
     "- product = produto\n",
@@ -60,14 +60,11 @@
     "- t = tempo que o assinante está na base de dados\t\n",
     "- c = informa se o evento de interesse (no caso o churn (cancelamento da assinatura) ocorreu ou não\n",
     "\n",
+    "Eliminamos o efeito de censura à esquerda eliminando casos de reativações, dado que queriamos entender a jornada do assinante como um todo sem nenhum tipo de viés relativo a questões de customer winback. Em relação à censura à direita temos que já se passaram alguns meses desde que essa base de dados foi extraída.\n",
     "\n",
-    "\n",
-    "Eliminamos o efeito de censura à esquerda eliminando casos de reativações, dado que queriamos entender a jornada do assinante como um todo sem nenhum tipo de viés relativo a questões de customer winback. Em relação à censura à direita temos que esses dados já se passaram alguns meses desde o que essa base foi extraída.\n",
-    "\n",
-    "Um aspecto técnico importante a ser considerado é que esses dois produtos estão em categorias de comparabilidade, dado que sem isso nenhum tipo de caractericaç˜µao seria nula.\n",
+    "Um aspecto técnico importante a ser considerado é que esses dois produtos estão em categorias de comparabilidade, dado que sem isso nenhum tipo de caractericação seria nula.\n",
     "\n",
     "No fim dessa implementação teremos uma tabela de vida de cada um desses produtos. \n",
-    "\n",
     "\n",
     "\n",
     "Primeiramente vamos importar as bibilotecas: Pandas (para manipulação de dados), matplotlib (para a geração de gráficos), e lifelines para aplicação da análise de sobrevivência"
@@ -922,21 +919,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.8"
   }
  },
  "nbformat": 4,
