Fixing Typos and put some links

--- a/Python/Análise de Sobrevivência em Telecom.ipynb
+++ b/Python/Análise de Sobrevivência em Telecom.ipynb
@@ -17,31 +17,31 @@
     "\n",
     "Fazendo uma analogia simples, os serviços de assinatura são como uma espécie de sangue na corrente sanguínea de uma empresa e uma interrupção de qualquer natureza prejudica todo o negócio, dado que esse é um modelo de negócio que se baseia na recorrência de tarifação e não no desenvolvimento, ou mesmo venda de outros produtos. \n",
     "\n",
-    "Modelos de negócoios baseados no volume de pessoas que estão dispostas a terem uma cobrança recorrente o negócio fica bem mais complicado, dado que diferentemente de produtos que tem uma eslasticidade maior o fluxo de receita é extremamente sujeito aos sabores do mercado e dos clientes.\n",
+    "Modelos de negócios baseados no volume de pessoas que estão dispostas a terem uma cobrança recorrente o negócio fica bem mais complicado, dado que diferentemente de produtos que tem uma eslasticidade maior o fluxo de receita é extremamente sujeito aos sabores do mercado e dos clientes.\n",
     "\n",
     "Dentro desse cenário, todas as empresas que tem o seu fluxo de receita baseado nesse tipo de business, saber quando um cliente entrará em uma situação de saída através do cancelamento do serviço (Churn) é fundamental para criar mecanismos de retenção mais efetivos, ou mesmo criação de réguas de contato com os clientes para evitar ou minimizar a chance de um cliente sair da base de dados. \n",
     "\n",
-    "Sendo assim, qualquer mecanismo ou mesmo esforço para minimizar esse efeito é de grande valia. E é aí que fomos na teoria estatística buscar respostas para a pergunta: Como diminuir o Churn? Como identificar um potencial cliente que irá entrar em uma situação de Churn? Quais estratégias seguir para minimizar esse Churn? Quais réguas de comunicação com os clientes devemos ter para entender os motivos que estão fazendo um assinante cancelar o serviço e quais são as estratégias de customer winback possíveis nesse cenário?\n",
+    "Sendo assim, qualquer mecanismo ou mesmo esforço para minimizar esse efeito é de grande valia. Nos baseamos na teoria estatística buscar respostas para a pergunta: Como diminuir o Churn? Como identificar um potencial cliente que irá entrar em uma situação de Churn? Quais estratégias seguir para minimizar esse Churn? Quais réguas de comunicação com os clientes devemos ter para entender os motivos que estão fazendo um assinante cancelar o serviço e quais são as estratégias de customer winback (https://www.amazon.com/Customer-Winback-Recapture-Customers-Loyal/dp/0787946672) possíveis nesse cenário?\n",
     "\n",
     "E pra responder essa pergunta, fomos buscar as respostas na análise de sobrevivência dado que essa área da estatística é uma das que lidam melhor em termos de probabilidade de tempo de vida, seja de materiais (e.g. tempo de falha de algum sistema mecânico), no tempo de vida de pessoas propriamente ditas (e.g. dado uma determinada posologia qual é a estimativa de um paciente sobreviver a um câncer), e no nosso caso quanto tempo de vida um assinante tem até deixar cancelar a sua assinatura. \n",
     "\n",
     "A análise de sobreviência é uma técnica estatístisca que foi desenvolvida na medicina e tem como principal finalidade estimar o tempo de sobrevivência ou tempo de morte de um determinado paciente dentro de um horizonte do tempo. \n",
     "\n",
-    "O estimador de Kaplan-Meier (1958) utiliza uma função de sobrevivência que leva em consideração uma divisão entre o número de observações que não falharam no tempo t pelo número total de observações no estudo em que cada intervalo de tempo tem-se o número de falhas/mortes/churn distintos bem como é calculado o risco de acordo com o número de individuos restantes no tempo subsequente.\n",
+    "O estimador de Kaplan-Meier (1958) (http://www.biecek.pl/statystykaMedyczna/2281868.pdf) utiliza uma função de sobrevivência que leva em consideração uma divisão entre o número de observações que não falharam no tempo t pelo número total de observações no estudo em que cada intervalo de tempo tem-se o número de falhas/mortes/churn distintos bem como é calculado o risco de acordo com o número de individuos restantes no tempo subsequente.\n",
     "\n",
-    "Já o estimador Nelson-Aalen (1978) é um estimador que tem as mesmas características do Kaplan-Meier, com a dferença que esse estimador trabalha com uma função de sobrevivência que é a cumulative hazard rate function.\n",
+    "Já o estimador Nelson-Aalen (1978) (http://projecteuclid.org/download/pdf_1/euclid.aos/1176344198) é um estimador que tem as mesmas características do Kaplan-Meier (), com a dferença que esse estimador trabalha com uma função de sobrevivência que é a cumulative hazard rate function.\n",
     "\n",
-    "Os elementos fundamentais para caracterização de um estudo que envolve análise de sobrevivência são, o tempo inicial, escala de medida do intervalo de tempo, e se o evento de churn ocorreu.\n",
+    "Os elementos fundamentais para caracterização de um estudo que envolve análise de sobrevivência são, o tempo inicial, escala de medida do intervalo de tempo e se o evento de churn ocorreu.\n",
     "\n",
-    "Os principais artigos são de Stigler (1994), Kaplan-Meier (1958) e Cox (1972).\n",
+    "Os principais artigos são de Aalen (1978) (http://projecteuclid.org/download/pdf_1/euclid.aos/1176344198), Kaplan-Meier (1958) (http://www.biecek.pl/statystykaMedyczna/2281868.pdf) e Cox (1972) (http://www.biecek.pl/statystykaMedyczna/cox.pdf).\n",
     "\n",
     "Esse post não tem como principal objetivo dar algum tipo de introdução à survival analysis, dado que tem muitas referências na internet sobre o assunto e não há nada a ser acrescentado nesse sentido. \n",
     "\n",
-    "Como a análise de cohort, a análise de sobrevivência tem como principal característica ser um estudo de natureza logituginal, isto é, os seus resultados tem uma caracterisca de temporalidade seja em aspectos de retrospecção, quanto em termos de perspectivas, isso é, tem uma resposta tipicamente temporal para um detemrminado evento de interesse. \n",
+    "Como a análise de cohort (https://en.wikipedia.org/wiki/Cohort_analysis), a análise de sobrevivência tem como principal característica ser um estudo de natureza logituginal, isto é, os seus resultados tem uma caracterisca de temporalidade seja em aspectos de retrospecção, quanto em termos de perspectivas, isso é, tem uma resposta tipicamente temporal para um detemrminado evento de interesse. \n",
     "\n",
     "No caso o que vamos usar como forma de comparação amostral é o comportamento longituginal de acordo com determinadas caracteristicas de amostragens diferentes ao longo do tempo, e os fatores que influenciam no churn.\n",
     "\n",
-    "As diferenciações estão claras através das covariáveis, mas que devido a questões de NDA não vamos postar aqui, mas para fins de exemplificação e comparação vamos considerar que todas as covariaveis são semelhantes.\n",
+    "As diferenciações estão claras através das covariáveis, mas que devido a questões de NDA (https://en.wikipedia.org/wiki/Non-disclosure_agreement) não vamos postar aqui, mas para fins de exemplificação e comparação vamos considerar que todas as covariaveis são semelhantes.\n",
     "\n",
     "Podemos dizer que a análise de sobrevivência aplicada em um caso de telecom, pode ajudar ter uma estimativa em forma de probabilidade em relação ao tempo em que uma assinatura vai durar até o evento de churn (cancelamento) e dessa forma elaborar estratégias para evitar esse evento, dado que adquirir um novo cliente é mais caro do que manter um novo e entra totalmente dentro de uma estratégia de Customer Winback\n",
     "\n",
@@ -60,7 +60,7 @@
     "- t = tempo que o assinante está na base de dados\t\n",
     "- c = informa se o evento de interesse (no caso o churn (cancelamento da assinatura) ocorreu ou não\n",
     "\n",
-    "Eliminamos o efeito de censura à esquerda eliminando casos de reativações, dado que queriamos entender a jornada do assinante como um todo sem nenhum tipo de viés relativo a questões de customer winback. Em relação à censura à direita temos que já se passaram alguns meses desde que essa base de dados foi extraída.\n",
+    "Eliminamos o efeito de censura à esquerda (https://en.wikipedia.org/wiki/Survival_analysis#Censoring) eliminando casos de reativações, dado que queriamos entender a jornada do assinante como um todo sem nenhum tipo de viés relativo a questões de customer winback. Em relação à censura à direita (https://en.wikipedia.org/wiki/Survival_analysis#Censoring) temos que já se passaram alguns meses desde que essa base de dados foi extraída.\n",
     "\n",
     "Um aspecto técnico importante a ser considerado é que esses dois produtos estão em categorias de comparabilidade, dado que sem isso nenhum tipo de caractericação seria nula.\n",
     "\n",
@@ -351,7 +351,7 @@
     "kmf.survival_function_.plot()\n",
     "plt.title('Survival function of Service Valued Add Products');\n",
     "plt.ylabel('Probability of Living (%)')\n",
-    "plt.xlabel('Lifespan of the subscription')"
+    "plt.xlabel('Lifespan of the subscription (in days)')"
    ]
   },
   {
@@ -417,10 +417,10 @@
    "source": [
     "Contudo nesse modelo inicial temos duas limitações claras que são:\n",
     "- Os dados no agregado não dizem muito em relação à dinâmicas que podem estar na especificidade de alguns atributos/dimensões\n",
-    "- Não é exploradas as dimensões (ou quebras) de acordo com os atributos que vieram na base de dados\n",
+    "- Não são exploradas as dimensões (ou quebras) de acordo com os atributos que vieram na base de dados\n",
     "- Não há a divisão por produto\n",
     "\n",
-    "Para isso, vamos começar a fazer um drill-down em relação a cada uma das dimensões e ver o que cada uma tem de influência em relação à função de sobrevivência. \n",
+    "Para isso, vamos começar a entrar no detalhe em relação a cada uma das dimensões e ver o que cada uma tem de influência em relação à função de sobrevivência. \n",
     "\n",
     "Vamos começar realizando a quebra por tipo de plano (user_plan) em que temos usuários pré-pagos com usuários pós-pagos e essa divisão será feita por produto."
    ]
@@ -472,10 +472,10 @@
    "metadata": {},
    "source": [
     "Este gráfico apresenta algumas informações importantes para os primeiros insights em relação a cada uma das curvas de sobreviência em relação ao tipo de gratuídade oferecida como fator de influência para o churn que são:\n",
-    "- Os assinantes que entram como não gratuítos (i.e. não tem nenhum tipo de degustação inicial) após o 15o dia apresenta um decaímento brutal de mais de 40% da chance de sobreviência (tratando-se do intervalo de confiança);\n",
-    "- Após o 15o dia os assinantes que não desfrutam de degustação tem a sua curva de sobrevivência em uma relativa estabilidade em torno de 60% na probabilidade de sobrevivência até o período censurado;\n",
-    "- Ainda nos usuários sem degustação, dado o grau de variabilidade do intervalo de confiança podemos tirar como conclusão que muitos cancelamentos estão ocorrendo de forma muito acelerada, o que deve ser investigado com mais calma pelo time de produtos;\n",
-    "- Já oos usuários que entram via degustação (i.e. ganham alguns dias grátis antes de serem tarifados) apresenta um nível de decaímento do nível de sobreviência maior seja no período incial, quando ao longo do tempo, contudo uma estabilidade é encontrada ao longo de toda a série sem maiores sobressaltos.\n",
+    "- Os assinantes que entram como não gratuítos (i.e. não tem nenhum tipo de gratuidade inicial) após o 15o dia apresenta um decaímento brutal de mais de 40% da chance de sobreviência (tratando-se do intervalo de confiança);\n",
+    "- Após o 15o dia os assinantes que não desfrutam de gratuidade tem a sua curva de sobrevivência em uma relativa estabilidade em torno de 60% na probabilidade de sobrevivência até o período censurado;\n",
+    "- Ainda nos usuários sem gratuidade, dado o grau de variabilidade do intervalo de confiança podemos tirar como conclusão que muitos cancelamentos estão ocorrendo de forma muito acelerada, o que deve ser investigado com mais calma pelo time de produtos;\n",
+    "- Já os usuários que entram via gratuidade (i.e. ganham alguns dias grátis antes de serem tarifados) apresenta um nível de decaímento do nível de sobreviência maior seja no período incial, quando ao longo do tempo, contudo uma estabilidade é encontrada ao longo de toda a série sem maiores sobressaltos.\n",
     "\n",
     "Dado essa análise incial das curvas de sobreviência, vamos avaliar agora as probabilidades de sobrevivência de acordo com o produto. "
    ]
@@ -919,21 +919,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.8"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
