--- a/Python/Análise de Sobrevivência em Telecom.ipynb
+++ b/Python/Análise de Sobrevivência em Telecom.ipynb
@@ -391,7 +391,7 @@
     "kmf.fit(T[~free], event_observed=C[~free], label=\"Non-Free Users\")\n",
     "kmf.plot(ax=ax, ci_force_lines=True)\n",
     "plt.ylim(0,1);\n",
-    "plt.title(\"Lifespans of different User Plans\");\n",
+    "plt.title(\"Lifespans of different subscription types\");\n",
     "plt.ylabel('Probability of Living (%)')\n",
     "plt.xlabel('Lifespan')\n"
    ]
